--- a/louis_drogo.qmd
+++ b/louis_drogo.qmd
@@ -43,5 +43,23 @@ class(iris) # data frame
 class(1) # numeric
 class(1L) # integer
 ```
+## Vector
 
+Many things in R are vectors (and most of the other things are lists).
+A vector is a collection of values of the same type (possibly a single value).
+
+```{r}
+w <- 15.25
+length(w)  # all vectors have a length
+w[1]
+```
+
+The c-function can be seen as a creation function or, more accurately, as a vector concatenation function.
+```{r}
+y <- c(1,-2,45,1.5,-1e-10)
+y
+typeof(y)
+y[2]
+length(y)
+```
 
